[gd_scene load_steps=4 format=3 uid="uid://mgpdom0bxt1y"]

[ext_resource type="Script" uid="uid://dtjds5xuru1x6" path="res://scripts/ui/character_sheet.gd" id="1_84elj"]
[ext_resource type="PackedScene" uid="uid://c2w13g6qp7nis" path="res://scenes/ui/equipment_slot.tscn" id="1_pylm2"]
[ext_resource type="PackedScene" uid="uid://i8r3dhcqw1wa" path="res://scenes/ui/inventory_panel.tscn" id="2_ielsr"]

[node name="CharacterSheet" type="PanelContainer"]
script = ExtResource("1_84elj")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="WeaponSlot" parent="HBoxContainer/VBoxContainer" instance=ExtResource("1_pylm2")]
unique_name_in_owner = true
layout_mode = 2
slot_type = 1

[node name="ArmorSlot" parent="HBoxContainer/VBoxContainer" instance=ExtResource("1_pylm2")]
unique_name_in_owner = true
layout_mode = 2
slot_type = 2

[node name="InventoryPanel" parent="HBoxContainer" instance=ExtResource("2_ielsr")]
unique_name_in_owner = true
layout_mode = 2
